# otus_c_2022

./: .gitignore  README.md
asm/: README.md
asm/asm/: Makefile  main.deb.asm  main.deb.fixed.asm  main.info.asm
asm/c/: .clang-format-include  Makefile  main.c
crc32/: README.md  meson.build
crc32/src/: main.c
file_size_daemon/: .gitignore  README.md  meson.build
file_size_daemon/cfg/: fszd.yaml
file_size_daemon/include/: config.h
file_size_daemon/src/: config.c  main.c
frequency_dictionary/: .clang-tidy  README.md  meson.build
frequency_dictionary/include/: frequency_dict.h  frequency_dictionary.h  hash_map.h
frequency_dictionary/src/: main.c
frequency_dictionary/subprojects/: cmocka.wrap
frequency_dictionary/tests/: meson.build
frequency_dictionary/tests/src/: dictionary_test.c
http_parser/: .clang-tidy  README.md  meson.build
http_parser/include/: http_record.h
http_parser/src/: main.c
http_server/: .clang-format  README.md  meson.build
http_server/src/: main.c
jpeg_zip/: .clang-format  .clang-format-include  README.md  meson.build
jpeg_zip/src/: main.c
logger/: README.md  meson.build
logger/include/: logger.h
logger/sample/: meson.build  sample.c
logger/src/: logger.c
telehack_clt/: README.md  meson.build
telehack_clt/src/: main.c
to_utf8/: README.md  meson.build
to_utf8/src/: main.c
valgrind/: clib_package.c.patch
wait_free_hash_map/: .clang-format-include  .clang-tidy-ignore  .gitignore  README.md  meson.build
wait_free_hash_map/include/: wtf_table.h
wait_free_hash_map/sample/: meson.build  tools_test.c  wtf_table_sample.c
wait_free_hash_map/tests/: meson.build  wtf_table_ut.c
wait_free_hash_map/tests/scripts/: run_valgrind.sh
weather/: .clang-tidy  README.md  meson.build
weather/src/: main.c
